# system-monitor

./: .gitignore  LICENCE  README.md
agent/: CMakeLists.txt
agent/includes/agent/: metrics.hpp  platform.hpp  provider.hpp
agent/includes/agent/linux/: cpuinfo.hpp
agent/src/: main.cpp  provider.cpp
agent/src/platform/: windows.cpp
agent/src/platform/linux/: cpuinfo.cpp  linux.cpp
docs/: api.md  archtecture.md
